log
Wed 24 Apr 2024 05:55:27 PM UTC: 
 hashmap.c | 38 +++++++++++++++++++++++++++++++++-----
 1 file changed, 33 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:71:10: error: unused variable ‘newArray’ [-Werror=unused-variable]
   71 |   Pair** newArray = (Pair**)malloc(newCapacity * sizeof(Pair**));
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
50feaef
Wed 24 Apr 2024 05:56:54 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
8c9474f
Wed 24 Apr 2024 06:03:07 PM UTC: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  0|0
9fe68fa
Wed 24 Apr 2024 06:06:55 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
f6141e7
Wed 24 Apr 2024 06:08:52 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
4592e4a
Wed 24 Apr 2024 06:10:29 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
eb7c94f
Wed 24 Apr 2024 06:14:56 PM UTC: 
 hashmap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  6|3
total_score: 40/70
5013ca5
Wed 24 Apr 2024 06:15:15 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  6|3
total_score: 40/70
7289973
Wed 24 Apr 2024 06:18:15 PM UTC: 
 hashmap.c | 15 ++++++++++-----
 1 file changed, 10 insertions(+), 5 deletions(-)
 tests:  6|3
total_score: 40/70
7e08732
Wed 24 Apr 2024 06:20:33 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:116:3: error: expected ‘,’ or ‘;’ before ‘if’
  116 |   if (map->buckets[pos]->key == key){
      |   ^~
hashmap.c:115:7: error: unused variable ‘pos’ [-Werror=unused-variable]
  115 |   int pos = get_valid_location(map, key)
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
30d158e
Wed 24 Apr 2024 06:20:47 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7e4bf0c
Wed 24 Apr 2024 06:21:03 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:119:1: error: control reaches end of non-void function [-Werror=return-type]
  119 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e7b9190
Wed 24 Apr 2024 06:21:19 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:119:3: error: this ‘else’ clause does not guard... [-Werror=misleading-indentation]
  119 |   else;
      |   ^~~~
hashmap.c:120:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘else’
  120 |     return NULL;
      |     ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
adc6430
Wed 24 Apr 2024 06:21:27 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
adc6430
Wed 24 Apr 2024 06:44:25 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
c5dba49
Wed 24 Apr 2024 06:45:36 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
e861e4a
Thu 25 Apr 2024 02:57:19 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
522e0e0
Thu 25 Apr 2024 02:57:52 AM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
ed5fcb4
Thu 25 Apr 2024 02:58:34 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4dcd2c4
Thu 25 Apr 2024 02:59:18 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
7470e36
Thu 25 Apr 2024 02:59:42 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|3
total_score: 40/70
040d68a
Thu 25 Apr 2024 03:09:29 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:109:7: error: unused variable ‘pos’ [-Werror=unused-variable]
  109 |   int pos = get_valid_location(map, key);
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
d933fd0
Thu 25 Apr 2024 03:09:52 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|3
total_score: 40/70
ff8b939
Thu 25 Apr 2024 03:10:39 AM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  7|3
total_score: 40/70
a0c3b64
Thu 25 Apr 2024 03:11:50 AM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  7|3
total_score: 40/70
ac98c00
Thu 25 Apr 2024 03:18:42 AM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  9|2
total_score: 50/70
1dea56a
Thu 25 Apr 2024 03:21:35 AM UTC: 
 hashmap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  9|2
total_score: 50/70
bac568b
Thu 25 Apr 2024 03:22:26 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|2
total_score: 50/70
31dd869
Thu 25 Apr 2024 03:22:43 AM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|2
total_score: 50/70
2092e31
Thu 25 Apr 2024 03:25:39 AM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  9|2
total_score: 50/70
361588f
